# code_challenge_cognyte

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  setup.sh
src/: atomic_queue.hpp  client.cpp  configuration.hpp  file_writer.hpp  server.cpp
