SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE( Boost 1.74 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

ADD_EXECUTABLE( server src/server.cpp )
TARGET_LINK_LIBRARIES( server LINK_PUBLIC ${Boost_LIBRARIES} )

ADD_EXECUTABLE( client src/client.cpp )
TARGET_LINK_LIBRARIES( client LINK_PUBLIC ${Boost_LIBRARIES} )